@@ -71,6 +71,7 @@ PHP if you have not done so prior to upgrading MediaWiki.
   details.
 * $wgProfiling has been removed.
 * The spyc library is now no longer included in phase3.
+* (bug 28343) Unused preferences contextlines/contextchars have been removed
 
 === New features in 1.18 ===
 * (bug 8130) Query pages should limit to content namespaces, not just main
